[gd_scene load_steps=9 format=2]

[ext_resource path="res://meshes/SciFi_Corridor_Door.glb" type="PackedScene" id=1]
[ext_resource path="res://meshes/SciFi_Corridor_Section.glb" type="PackedScene" id=2]
[ext_resource path="res://levels/ScifiDoor.gd" type="Script" id=3]
[ext_resource path="res://levels/Area.gd" type="Script" id=4]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1, 1.5, 3 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.3, 1.8, 3.5 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 2.1, 1.7, 0.2 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 2.15, 0.1, 2.9 )

[node name="ScifiDoor" type="StaticBody"]
script = ExtResource( 3 )

[node name="SciFi_Corridor_Door" parent="." instance=ExtResource( 1 )]

[node name="SciFi_Corridor_Section" parent="." instance=ExtResource( 2 )]
visible = false

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.60696, 1.84797, 0 )
script = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.289667, 0, 0 )
shape = SubResource( 1 )

[node name="DoorCollider" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.37705, 1.74677, 0 )
shape = SubResource( 3 )

[node name="CollisionShape2" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.76095, 2.96378 )
shape = SubResource( 4 )

[node name="CollisionShape3" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.76095, -2.9734 )
shape = SubResource( 4 )

[node name="CollisionShape4" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.102601, 0 )
shape = SubResource( 5 )

[node name="CollisionShape5" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.60886, 0 )
shape = SubResource( 5 )
